--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 };
                 // Log the request body for debugging
                 console.log('Request Body:', requestBody);
-				fetch('https://apim.workato.com/bostons/test-tatiana-brat-v1/auth', {
+				const response =await fetch('https://apim.workato.com/bostons/test-tatiana-brat-v1/auth', {
 				  method: 'POST',
 				  headers: {
 					'Content-Type': 'application/json',
@@ -24,7 +24,17 @@
 				  },
 				  body: JSON.stringify(requestBody)
 				})
-				
+			if (response.status === 200) {
+                    // Redirect to www.google.com
+                    window.location.href = 'C:/Users/BOS-User/Documents/testload.html';
+                } else {
+                    // Log the response text for debugging
+                    const errorText = await response.text();
+                    console.error('Error Response:', errorText);
+                    throw new Error('Network response was not ok');
+                }
+
+			
             } catch (error) {
                 console.error('There was a problem with the fetch operation:', error);
             }
