--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 // Check if the response status is 200
                 if (response.status === 200) {
                     // Redirect to www.google.com
-                    window.location.href = 'C:/Users/BOS-User/Documents/testload.html';
+                    window.location.href = '../testload.html';
                 } else {
                     // Log the response text for debugging
                     const errorText = await response.text();
@@ -50,4 +50,5 @@
 <body>
     <h1>Loading...</h1>
 </body>
+
 </html>
