--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 // Check if the response status is 200
                 if (response.status === 200) {
                     // Redirect to www.google.com
-                    window.location.href = '../testload.html';
+                    window.location.href = 'https://loliblood199-a11y.github.io/testsite/testload.html';
                 } else {
                     // Log the response text for debugging
                     const errorText = await response.text();
@@ -52,3 +52,4 @@
 </body>
 
 </html>
+
