--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
     <script>
         async function fetchDataAndRedirect() {
             try {
+				// Get the full URL of the current page
+				const url = window.location.href;
+
+				// Create a URL object
+				const urlObj = new URL(url);
+
+				// Use URLSearchParams to get the query parameters
+				const params = new URLSearchParams(urlObj.search);
+
+				// Get the 'user_id' parameter
+				const userId = params.get('user_id');
+
+				// Log the user_id to the console
+				console.log('User ID:', userId);
+
                 // Define the authentication token
                 const authToken = '13962230fe43ae5eafa9fec42de3b6859b8d9f27cdc69ae43c5332b369bb4496';
                 // Define the request body
                 const requestBody = {
-                    user_id: 'm6Q8xk4QMZUCQ2DyKKauow'
+                    user_id: userId
                 };
                 // Log the request body for debugging
                 console.log('Request Body:', requestBody);
@@ -30,7 +45,7 @@
                 // Check if the response status is 200
                 if (response.status === 200) {
                     // Redirect to www.google.com
-                    window.location.href = 'https://loliblood199-a11y.github.io/testsite/testload.html';
+                    window.location.href = 'https://loliblood199-a11y.github.io/testsite2/testload.html';
                 } else {
                     // Log the response text for debugging
                     const errorText = await response.text();
